refactor: Cambio completo a Jetpack Compose

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.app1">
 
@@ -8,13 +7,9 @@
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
         android:supportsRtl="true">
 
-        <activity android:name=".WelcomeActivity" />
-        <activity android:name=".RegisterActivity" />
-
-        <!-- Login como actividad principal -->
-        <activity
-            android:name=".LoginActivity"
-            android:exported="true">
+        <!-- Actividad principal -->
+        <activity android:name=".MainActivity"
+            android:exported="true"> <!-- Se agregó android:exported="true" -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
