--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Apr 22 19:11:58 ART 2025
-sdk.dir=C\:\\Users\\PC\\AppData\\Local\\Android\\Sdk
+#Wed Apr 23 14:29:00 ART 2025
+sdk.dir=C\:\\Users\\beker\\AppData\\Local\\Android\\Sdk
